enzo1.6-mtmm-videos-images-someMoreRefinements

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,21 @@
 {
     "cSpell.words": [
-        "vercel"
+        "CLGO",
+        "flextree",
+        "hqdefault",
+        "markmap",
+        "maxresdefault",
+        "modestbranding",
+        "mqdefault",
+        "noopener",
+        "noreferrer",
+        "pexels",
+        "sddefault",
+        "setex",
+        "Supabase",
+        "turbopack",
+        "Uaus",
+        "vercel",
+        "ytimg"
     ]
 }
