--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@clerk/nextjs": "^6.24.0",
     "@google/generative-ai": "^0.24.1",
     "@types/react-syntax-highlighter": "^15.5.13",
+    "@upstash/redis": "^1.35.1",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
     "axios": "^1.10.0",
@@ -27,6 +28,7 @@
     "markmap-view": "^0.18.12",
     "mermaid": "^11.8.1",
     "next": "15.3.5",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
@@ -34,7 +36,9 @@
     "react-syntax-highlighter": "^15.6.1",
     "remark-gfm": "^4.0.1",
     "svg-pan-zoom": "^3.6.2",
-    "tailwind-merge": "^3.3.1"
+    "swr": "^2.3.4",
+    "tailwind-merge": "^3.3.1",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
