deepSearch-Subjects-UIUX

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,21 +1,55 @@
 {
     "cSpell.words": [
+        "apify",
+        "beautifulsoup",
+        "blockquotes",
+        "Blockquotes",
         "CLGO",
+        "crossref",
+        "ddgn",
+        "dfbnivqtrlh",
+        "doai",
+        "dotenv",
+        "duckduckgo",
+        "enzo",
+        "Enzo",
+        "fastapi",
         "flextree",
+        "gapi",
+        "GAPI",
+        "genai",
+        "generativeai",
+        "googleusercontent",
         "hqdefault",
         "markmap",
+        "maxres",
         "maxresdefault",
         "modestbranding",
         "mqdefault",
+        "noapi",
+        "noindex",
+        "noopen",
         "noopener",
         "noreferrer",
+        "noscript",
+        "nosniff",
+        "oadoi",
         "pexels",
+        "pydantic",
+        "qaurb",
         "sddefault",
+        "searx",
+        "searxng",
         "setex",
+        "startpage",
+        "subarrays",
         "Supabase",
+        "tiktok",
         "turbopack",
         "Uaus",
+        "uvicorn",
         "vercel",
+        "youtu",
         "ytimg"
     ]
 }
