--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "d3": "^7.9.0",
     "d3-flextree": "^2.1.2",
     "file-saver": "^2.0.5",
+    "framer-motion": "^12.23.6",
     "html-to-image": "^1.11.13",
     "lucide-react": "^0.525.0",
+    "markdown-it": "^14.1.0",
     "markmap-lib": "^0.18.12",
     "markmap-toolbar": "^0.18.12",
     "markmap-view": "^0.18.12",
@@ -45,6 +47,7 @@
     "@tailwindcss/postcss": "^4",
     "@types/d3": "^7.4.3",
     "@types/file-saver": "^2.0.7",
+    "@types/markdown-it": "^14.1.2",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
