--- a/package.json
+++ b/package.json
@@ -29,13 +29,14 @@
     "markmap-toolbar": "^0.18.12",
     "markmap-view": "^0.18.12",
     "mermaid": "^11.8.1",
+    "motion": "^12.23.6",
     "next": "15.3.5",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
-    "react-syntax-highlighter": "^15.6.1",
+    "react-syntax-highlighter": "^5.8.0",
     "remark-gfm": "^4.0.1",
     "svg-pan-zoom": "^3.6.2",
     "swr": "^2.3.4",
