feat: Dark Mode, Study Modes & Groq LLM Integration , uiux++

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
     "cSpell.words": [
+        "abductive",
+        "alouds",
         "apify",
+        "architecting",
         "beautifulsoup",
         "blockquotes",
         "Blockquotes",
@@ -8,24 +11,38 @@
         "crossref",
         "ddgn",
         "dfbnivqtrlh",
+        "dialogical",
+        "Dialogical",
+        "disconfirm",
+        "disconfirming",
         "doai",
         "dotenv",
         "duckduckgo",
+        "Dweck's",
         "enzo",
         "Enzo",
         "fastapi",
         "flextree",
+        "Gagné's",
         "gapi",
         "GAPI",
         "genai",
         "generativeai",
         "googleusercontent",
         "hqdefault",
+        "intersubjective",
+        "Kolb's",
         "markmap",
         "maxres",
         "maxresdefault",
+        "metacognition",
+        "metacognitive",
+        "Metacognitive",
         "modestbranding",
         "mqdefault",
+        "neuroplasticity",
+        "Neuroplasticity",
+        "neuroscientific",
         "noapi",
         "noindex",
         "noopen",
@@ -34,21 +51,29 @@
         "noscript",
         "nosniff",
         "oadoi",
+        "overfitting",
         "pexels",
+        "philosophia",
         "pydantic",
         "qaurb",
+        "Rosenshine's",
+        "Schön's",
         "sddefault",
         "searx",
         "searxng",
         "setex",
+        "showcaseable",
         "startpage",
         "subarrays",
         "Supabase",
         "tiktok",
+        "transformatively",
         "turbopack",
         "Uaus",
         "uvicorn",
         "vercel",
+        "Vygotsky's",
+        "Wenger's",
         "youtu",
         "ytimg"
     ]
