--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@clerk/nextjs": "^6.24.0",
     "@google/generative-ai": "^0.24.1",
+    "@react-three/fiber": "^9.2.0",
     "@types/react-syntax-highlighter": "^15.5.13",
+    "@types/three": "^0.178.1",
     "@upstash/redis": "^1.35.1",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
@@ -22,6 +24,7 @@
     "d3-flextree": "^2.1.2",
     "file-saver": "^2.0.5",
     "framer-motion": "^12.23.6",
+    "groq-sdk": "^0.29.0",
     "html-to-image": "^1.11.13",
     "lucide-react": "^0.525.0",
     "markdown-it": "^14.1.0",
@@ -38,9 +41,11 @@
     "react-markdown": "^10.1.0",
     "react-syntax-highlighter": "^5.8.0",
     "remark-gfm": "^4.0.1",
+    "styled-components": "^6.1.19",
     "svg-pan-zoom": "^3.6.2",
     "swr": "^2.3.4",
     "tailwind-merge": "^3.3.1",
+    "three": "^0.178.0",
     "zod": "^3.25.76"
   },
   "devDependencies": {
